Separate Team and Data Sources Pages - Separate team and datasources into individual pages - Add links to team and datasources in footer - Add link to index in header - Prevent line breaks in footer

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -137,6 +137,12 @@ header h1 {
 .green {
   color: #67A93C; }
 
+header a:hover,
+header a:active,
+header a:focus {
+  text-decoration: none;
+  border-bottom: 3px solid #E4DFCF; }
+
 header div {
   margin: 0 0 0 auto; }
 
@@ -328,8 +334,8 @@ footer ul {
   align-items: center;
   height: inherit; }
 
-footer ul li {
-  width: 5rem; }
+footer ul li:first-child {
+  margin-right: 1rem; }
 
 footer ul li:last-child {
   -webkit-flex-grow: 2;
