--- a/app/assets/scss/_header.scss
+++ b/app/assets/scss/_header.scss
@@ -30,6 +30,12 @@ header h1 {
 .green {
   color: $brand-green;
   }
+header a:hover,
+header a:active,
+header a:focus {
+  text-decoration: none;
+  border-bottom: 3px solid $brand-tan;
+}
 header div {
   margin: 0 0 0 auto;
 }
